manifests/jupyterhub/jupyterhub/overlays/openshift/delete-jupyterhub-ingress.yaml
patch: delete
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jupyterhub
