manifests/jupyterhub/jupyterhub/overlays/openshift/jupyterhub-ingress.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: jupyterhub
  name: jupyterhub
spec:
  host: $(JUPYTERHUB_HOST)
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: jupyterhub
    weight: 100
